openmediavault-docker-gui (0.2.18) UNRELEASED; urgency=low

  * Add support for host name to the run container dialog
  * Auto wrap description text on repo tab
  * Add filtering on repo/image names in grids
  * Add state column with filtering to container grid

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Tue, 10 Nov 2015 20:29:18 +0100

openmediavault-docker-gui (0.2.17) stable; urgency=low

  * Add tooltips to the Run Container dialogue

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sun, 11 Oct 2015 10:45:33 +0200

openmediavault-docker-gui (0.2.16) testing; urgency=low

  * Add extra parameters field

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Tue, 29 Sep 2015 19:04:34 +0200

openmediavault-docker-gui (0.2.15) stable; urgency=low

  * Fix problem with base path relocation not surviving reboots

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Tue, 22 Sep 2015 10:29:01 +0200

openmediavault-docker-gui (0.2.14) unstable; urgency=low

  * Fix missing requirements for Repo tab
  * Minor layout change on Repo tab

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 09 Sep 2015 21:16:38 +0200

openmediavault-docker-gui (0.2.13) unstable; urgency=low

  * More error handling when it comes to base path relocation

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 09 Sep 2015 11:17:44 +0200

openmediavault-docker-gui (0.2.12) unstable; urgency=low

  * Fix potential problem if base path is manually relocated
  * Simplify make process
  * Improved remove script
  * Make base path relocation survive reboots

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sun, 06 Sep 2015 10:45:15 +0200

openmediavault-docker-gui (0.2.11) unstable; urgency=low

  * Fix top bar buttons disable in grids on load

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Thu, 03 Sep 2015 21:56:06 +0200

openmediavault-docker-gui (0.2.10) unstable; urgency=low
